--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,16 @@
   text-align: center;
 }
 
+body{
+  max-width: 1100px;
+  margin: auto;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  height: 100vh;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
